Add fats and carbs to check-ins
